Fixed wrapping of status buttons

--- a/app/assets/stylesheets/playlists.css.scss
+++ b/app/assets/stylesheets/playlists.css.scss
@@ -18,6 +18,15 @@ thead .helper {
 tbody a:hover {
   background: transparent;
 }
+
+@media only screen and (min-width: 768px) {
+
+	th.actions {
+		min-width: 120px;
+	}
+
+}
+
 // a.label, a.label :visited {
 //  background-color: #BFBFBF;
 //}
